<resources>
    <string name="app_name">Shakti SME</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="server_error">Server Error</string>
    <string name="lead">নতুন লিড তৈরী</string>
    <string name="lead_list">লিড তালিকা</string>
    <string name="lead_list_fail">লিড তালিকা (অনুত্তীর্ণ)</string>
    <string name="org_name">প্রতিষ্ঠানের নাম</string>
    <string name="member_list">সদস্য তালিকা</string>
    <string name="loan_apply">ঋণের আবেদন</string>
    <string name="loan_submitted">জমাকৃত আবেদন</string>
    <string name="collection_schedule">কালেকশন সিডিউল</string>
    <string name="my_info">আমার তথ্য</string>
    <string name="logout">লগ আউট</string>
    <string name="nid_number">ভোটার আইডি নাম্বার</string>
    <string name="nid">NID: </string>
    <string name="mobile_number">মোবাইল নাম্বার - ১</string>
    <string name="mobile_number_0">মোবাইল নাম্বার</string>
    <string name="mobile_number_1">মোবাইল নাম্বার - ২</string>
    <string name="applicant_name">আবেদনকারীর নাম</string>
    <string name="name">নাম</string>
    <string name="name_with_clone">নামঃ \u0020</string>
    <string name="father_name">পিতার নাম</string>
    <string name="mother_name">মাতার নাম</string>
    <string name="passport_number">পাসপোর্ট নাম্বার</string>
    <string name="driving_license">ড্রাইভিং লাইসেন্স নাম্বার</string>
    <string name="income_holder">প্রধান উপার্জন কারীর নাম</string>
    <string name="relation">সম্পর্ক </string>
    <string name="relation_with_clone">সম্পর্কঃ \u0020 </string>
    <string name="spouse_name">স্বামী/স্ত্রীর নাম</string>
    <string name="ocupation">পেশা</string>
    <string name="ocupation_with_clone">পেশাঃ\u0020</string>
    <string name="ocupation_experience">পেশার অভিজ্ঞতা</string>
    <string name="education_qualification">শিক্ষাগত যোগ্যতা</string>
    <string name="education_qualification_with_clone">শিক্ষাগত যোগ্যতাঃ\u0020 </string>
    <string name="gender">লিঙ্গ</string>
    <string name="gender_male">পুরুষ</string>
    <string name="gender_female">নারী</string>
    <string name="date_of_birth">জন্ম তারিখ</string>
    <string name="year">বছর</string>
    <string name="age">বয়সঃ  \u0020</string>
    <string name="month">মাস</string>
    <string name="monthly">মাসিক</string>
    <string name="day">দিন</string>
    <string name="current_address">বরতমান ঠিকানা</string>
    <string name="working_address">কর্মক্ষেত্রের ঠিকানা</string>
    <string name="required_loan_amount">আবেদনকৃত ঋণের পরিমানঃ \u0020</string>
    <string name="type_of_loan">ঋণ প্রস্তাবের ধরনঃ \u0020</string>
    <string name="editTextHint">Enter Here</string>
    <string name="ageErrorMin">বয়স ২৫ এর বেশি হতে হবে</string>
    <string name="ageErrorMax">বয়স ৬৫ এর কম হতে হবে</string>
    <string name="nidErrorAlreadyHasAccount">এই ভোটার আইডি দিয়ে সদস্য খোলা আছে</string>
    <string name="nidError">অনুগ্রহ করে সঠিক ভোটার আইডি ইনপুট দিন</string>
    <string name="loanAmountError">অনুগ্রহ করে লোনের পরিমান উল্লেখ করুন </string>
    <string name="mobileErrorAlreadyHasAccount">এই মোবাইল নাম্বার দিয়ে সদস্য খোলা আছে</string>
    <string name="mobileError">অনুগ্রহ করে ১১ অঙ্কের সঠিক মোবাইল নাম্বার ইনপুট দিন</string>
    <string name="warning10LaksDifference">Warning ! Difference cant be 10,00,000tk</string>
    <string name="pre_screening">প্রিস্ক্রীনিং </string>
    <string name="pre_screening1">প্রিস্ক্রীনিঃ ১ - </string>
    <string name="pre_screening2">প্রিস্ক্রীনিংঃ ২ -  </string>
    <string name="pre_screening3">প্রিস্ক্রীনিংঃ ৩ - </string>
    <string name="pre_screening_not_done">প্রিস্ক্রীনিং এখনো করা হয়নি</string>
    <string name="pre_screening_not_done_code">0</string>
    <string name="pre_screening_incomplete">প্রপ্রিস্ক্রীনিং অসম্পূর্ণ রয়েছে</string>
    <string name="pre_screening_incomplete_code">1</string>
    <string name="pre_screening_complete">প্রিস্ক্রীনিং সম্পূর্ণ হয়েছে</string>
    <string name="pre_screening_upload">প্রিস্ক্রীনিং আপলোড</string>
    <string name="pre_screening_complete_code">2</string>
    <string name="title_activity_maps">Map</string>
    <string name="prescreen_result_init">2</string>
    <string name="prescreen_result_successfull">প্রিস্ক্রীনিং এ পাশ করেছে</string>
    <string name="prescreen_result_unsuccessfull">প্রিস্ক্রীনিং এ ফেল করেছে</string>
    <string name="leadID">Lead ID: </string>
    <string name="loadingLeadOptions">লীড অপশন লোড করা হচ্ছে ...</string>
    <string name="leadOptionsMultiplayer">/- গুনিতকে লিখতে হবে</string>
    <string name="errorRequiredAmount">\u0020 টাকার মাঝে থাকতে হবে। </string>
    <string name="errorPhotoUpload">আপনাকে অবশ্যই  ছবি যুক্ত করতে হবে।</string>
    <string name="errorAddNewLead">অনুগ্রহ করে সব গুলো অপশন পুরন করুন।</string>
    <string name="uploadToServer">তথ্য আপলোড করুন</string>
    <string name="uploadKyc">তথ্য আপলোড নিশ্চিত করুন</string>
    <string name="upload">আপলোড</string>
    <string name="uploading">আপলোড করা হচ্ছে...</string>
    <string name="downloading">ডাউনলোড করা হচ্ছে...</string>
    <string name="pleaseWait">অনুগ্রহ করে অপেক্ষা করুন</string>
    <string name="uploadSuccessful">আপলোড সফল হয়েছে।</string>
    <string name="rejected">রিজেক্টেড</string>
    <string name="memberID">Member ID: \u0020</string>
    <string name="totalLoanAmount">মোট ঋণের পরিমাণঃ\u0020</string>
    <string name="totalSavingsAmount">মোট সঞ্চয়ের পরিমাণঃ\u0020</string>
    <string name="overdue">ওভারডিউঃ\u0020</string>
    <string name="noLoan">এখনো কোন ঋণ দেওয়া হয়নাইঃ\u0020</string>
    <string name="noSavings">এখনো  সঞ্চয় কোন  জমা  নেইঃ\u0020</string>
    <string name="no">নাই\u0020</string>
    <string name="yes">হ্যাঁ </string>
    <string name="not">না </string>
    <string name="businessInformation">ঋণ আবেদন</string>
    <string name="personalInformation">KYC</string>
    <string name="present_address">বর্তমান ঠিকানা </string>
    <string name="parmanent_address">স্থায়ী ঠিকানা </string>
    <string name="guarantor_info">পরিচয় দানকারীর তথ্য</string>
    <string name="family_members">পরিবারের সদস্য তালিকা</string>
    <string name="general_info">সাধারন তথ্য</string>
    <string name="institute_info_detils">প্রতিস্থানের বিবরণী</string>
    <string name="kyc_personal_info">ব্যাক্তিগত তথ্য</string>
    <string name="kyc_relative_info">পরিচয় দানকারী</string>
    <string name="kyc_present_address">বর্তমান ঠিকানা</string>
    <string name="kyc_parmanent_address">স্থায়ী ঠিকানা</string>
    <string name="kyc_business_info">ব্যাবসায়িক তথ্য</string>
    <string name="kyc_business_detail">ব্যাবসার বিস্তারিত তথ্য</string>
    <string name="kyc_family_member">পরিবারিক সদস্য তথ্য</string>
    <string name="members_biz_info_part1">আর্থিক তথ্য (মাসিক)</string>
    <string name="members_biz_info_part2">অন্যান্য প্রয়োজনীয় তথ্য</string>
    <string name="members_business_information">সদস্যের ব্যবসায়িক তথ্য</string>
    <string name="members_personal_information">সদস্যের ব্যক্তিগত তথ্য</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning_lead_upload">লিড আপলোড অসম্পূর্ণ </string>
    <string name="warning_contact_with_supervisor">লীড এখনো অনুমোদন হয়নি</string>
    <string name="warning_user_not_passed_on_prescreening_1">পরবর্তী ধাপের জন্য উপযুক্ত নয়,</string>
    <string name="house_no">বাড়ি নাম্বার</string>
    <string name="road_no">সড়ক নাম্বার</string>
    <string name="road_name">সড়কের নাম</string>
    <string name="home_owner_name">বাড়িওালার নাম</string>
    <string name="village">গ্রাম / মহল্লা</string>
    <string name="post_office">পোস্ট অফিস</string>
    <string name="thana_or_upojela">থানা / উপজেলা</string>
    <string name="district">জেলা</string>
    <string name="members_obosthan">সদস্যের অবস্থান</string>
    <string name="rent_house">ভাড়া বাড়ি</string>
    <string name="own_house">নিজ বাড়ি</string>
    <string name="how_many_days_staying_in_this_area">এলাকায় কত বছর আছেন?</string>
    <string name="father_or_father_in_law__parmanent_address">বাবা / শশুর বাড়ির স্থায়ী ঠিকানা</string>
    <string name="fathers_place">বাবার বাড়ি</string>
    <string name="father_in_laws_place">শশুর বাড়ি</string>
    <string name="father_or_father_in_law_name">বাবার / শশুরের নাম</string>
    <string name="family_head_name">পরিবার প্রধানের নাম</string>
    <string name="marital_status">বৈবাহিক অবস্থাঃ\u0020</string>
    <string name="marriad">বিবাহিত\u0020</string>
    <string name="unmarriad">অবিবাহিত\u0020</string>
    <string name="biz_address">ব্যবসা প্রতিষ্ঠানের / চাকুরিস্থলের নাম ও ঠিকানা\u0020</string>
    <string name="biz_address_other">কারখানার / অন্য শাখার নাম ও ঠিকানা\u0020</string>
    <string name="biz_name">প্রতিষ্ঠানের নাম\u0020</string>
    <string name="biz_detils">ব্যবসা প্রতিষ্ঠানের বিবরণী \u0020</string>
    <string name="biz_udpadito_ponner_name">উৎপাদিত পন্নের নাম\u0020</string>
    <string name="biz_je_dhoroner_ponno_buy_and_sell_koren">যে ধরনের পন্য ক্রয় / বিক্রয় করেন \u0020</string>
    <string name="biz_business_year">বর্তমান ব্যবসার বয়স \u0020</string>
    <string name="biz_business_experience">ব্যবসায়ে মোট অভিজ্ঞতা\u0020</string>
    <string name="biz_business_type">ব্যবসার প্রকৃতি \u0020</string>
    <string name="biz_tread">ট্রেড \u0020</string>
    <string name="biz_utpadon_mukhi">উৎপাদনমুখী\u0020</string>
    <string name="biz_seba_mulok">সেবামুলক\u0020</string>
    <string name="biz_worker_count">বর্তমান কর্মচারীর সংখ্যা \u0020</string>
    <string name="biz_parmanent">স্থায়ী \u0020</string>
    <string name="biz_temporary">খন্ডকালীন \u0020</string>
    <string name="biz_total">মোট \u0020</string>
    <string name="biz_parmanent_male_worker">স্থায়ী পরুষ কর্মচারী  \u0020</string>
    <string name="biz_parmanent_female_worker">স্থায়ী মহিলা কর্মচারী \u0020</string>
    <string name="biz_temporary_male_worker">খন্ডকালীন পরুষ কর্মচারী  \u0020</string>
    <string name="biz_temporary_female_worker">খন্ডকালীন মহিলা কর্মচারী \u0020</string>
    <string name="biz_next_12_years_plan_for_worker">আগামী ১২ মাসে কর্মচারী বৃদ্ধির পরিকল্পিত সংখ্যা \u0020</string>
    <string name="biz_past_12_years_plan_for_worker">গত ১২ মাসে কি আপনার কর্মচারীর সংখ্যা বৃদ্ধি পেয়েছে নাকি হ্রাস পেয়েছে?</string>
    <string name="biz_decrease">হ্রাস \u0020</string>
    <string name="biz_increase">বৃদ্ধি \u0020</string>
    <string name="biz_count">জন \u0020</string>
    <string name="biz_decrease_number">কত জন বৃদ্ধি পেয়েছে \u0020</string>
    <string name="biz_info_kistir_dhoron">কিস্তির ধরনঃ \u0020</string>
    <string name="biz_info_loan_amount">ঋণের পরিমানঃ  \u0020</string>
    <string name="biz_info_number_of_EMI">মেয়াদঃ \u0020</string>
    <string name="biz_info_service_charge_percentage">সার্ভিস চার্জের হারঃ \u0020</string>
    <string name="gunogoto_parmanent_employee">স্থায়ী</string>
    <string name="gunogoto_temporary_employee">অস্থায়ী </string>
    <string name="income_based_income_details">আয় এর বিবরন</string>
    <string name="income_based_income_source">আয়ের খাত</string>
    <string name="income_based_basic_salary">মাসিক মূল বেতন (Basic)</string>
    <string name="income_based_Gross_salary">মাসিক মোট বেতন (Gross)</string>
    <string name="income_based_net_salary">মাসিক নীট বেতন (Take home salary)</string>
    <string name="income_based_receive_salary_bank">বেতন কি ব্যাঙ্ক একাউন্ট এর মাধ্যমে পান কি না</string>
    <string name="income_based_job_sector">কি ধরনের প্রতিষ্ঠানে চাকরী করেন?</string>
    <string name="income_based_job_type_govt">সরকারি</string>
    <string name="income_based_job_type_non_govt">বেসরকারি</string>
    <string name="income_based_job_type">কি ধরনের চাকুরি করেন?</string>
    <string name="income_based_income_on_house_rent">বাড়ি ভাড়া হতে মাসিক গড় আয়</string>
    <string name="income_based_income_on_house_age">বাড়ির বয়স কত? </string>
    <string name="income_based_income_total">মোট আয়</string>
    <string name="income_expence_yes">হ্যাঁ</string>
    <string name="income_expence_no">না </string>
</resources>