<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_lead"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/lead" />

        <item
            android:id="@+id/nav_lead_list"
            android:icon="@drawable/ic_logo_lead_list"
            android:title="@string/lead_list" />
        <item
            android:id="@+id/nav_lead_failed_list"
            android:icon="@drawable/lead"
            android:title="@string/lead_list_fail" />

        <item
            android:id="@+id/nav_member_list"
            android:icon="@drawable/member_list"
            android:title="@string/member_list" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_collection_schedule"
                android:icon="@drawable/collection"
                android:title="@string/collection_schedule" />
            <item
                android:id="@+id/nav_general_info"
                android:icon="@drawable/personal_info"
                android:title="@string/general_info" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>