<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".kyc.KYCPresentAddressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/present_address"/>

        <include layout="@layout/custom_address_layout"/>


        <!--members obosthan-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/members_obosthan" />

        <RadioGroup
            android:id="@+id/radioMembersObosthan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/newLeadMarginBottom"
            android:background="@drawable/round_corner"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <RadioButton
                android:id="@+id/rentedHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorGreen"
                android:checked="true"
                android:paddingRight="50dp"
                android:text="@string/rent_house" />

            <RadioButton
                android:id="@+id/ownHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:buttonTint="@color/colorGreen"
                android:text="@string/own_house" />

        </RadioGroup>


        <!--elakay koto bochor asen?-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_many_days_staying_in_this_area" />

        <EditText
            android:id="@+id/ed_elakay_koto_bochor_achen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/newLeadMarginBottom"
            android:background="@drawable/round_corner"
            android:hint="@string/editTextHint"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/newLeadEditTextSize"
            android:maxLength="2"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corner"
            android:gravity="center"
            android:text="Save"
            android:textSize="20sp" />


    </LinearLayout>


</ScrollView>