<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:gravity="end"
                android:layout_gravity="center|end"
                android:text="@string/biz_info_loan_amount"
                />

            <EditText
                android:id="@+id/custom_dialog_member_application_loan_amount"
                android:hint="@string/editTextHint"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:gravity="end"
                android:layout_gravity="center|end"
                android:text="@string/biz_info_service_charge_percentage"
                />

            <EditText
                android:id="@+id/custom_dialog_member_application_service_charge"
                android:hint="@string/editTextHint"
                android:text="24%"
                android:enabled="false"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:gravity="end"
                android:layout_gravity="center|end"
                android:text="@string/biz_info_kistir_dhoron"
                />

            <EditText
                android:id="@+id/custom_dialog_member_application_emi_type"
                android:hint="@string/editTextHint"
                android:text="@string/monthly"
                android:enabled="false"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:gravity="end"
                android:layout_gravity="center|end"
                android:text="@string/biz_info_number_of_EMI"
                />

            <Spinner
                android:id="@+id/custom_dialog_member_application_duration_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:spinnerMode="dialog"
                android:layout_marginBottom="9dp"

                />

        </TableRow>

        <TableRow android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_cancel_user_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>


            <Button
                android:id="@+id/button_save_user_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add To List"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>